[package]
name = "black_crab"
version = "0.1.0"
authors = ["Folknology <Al@folknology.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["stm32f730", "rt"]

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies]
as-slice = "0.1.0"
nb = "0.1.2"
rtcc = "0.2"
micromath = "1.0.0"
cortex-m = "0.6.0"
#cortex-m-rt = "0.6.8"
stm32f7 = "0.11.0"
# see https://github.com/stm32-rs/stm32f7xx-hal/issues/73 was version ="0.2.0"
#stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", features = ["stm32f730"] }
synopsys-usb-otg = { version = "0.2.3", features = ["cortex-m"], optional = true }
panic-halt = "0.2.0"
panic-itm = "0.4.2"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
#bitbang-hal = { git = "https://github.com/sajattack/bitbang-hal.git" }
cortex-m-rtic = "0.5.6"

[features]
device-selected = []
usb_hs_phy = []
rt = ["stm32f7/rt"]
stm32f730 = ["stm32f7/stm32f730", "device-selected", "usb_hs_phy", "usb_fs"]
usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]

[dependencies.stm32f7xx-hal]
features = ["stm32f730","device-selected", "usb_hs_phy", "usb_fs", "rt"]
git = "https://github.com/stm32-rs/stm32f7xx-hal"

